--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>button.qml</file>
+        <file>Chart.qml</file>
+        <file>Term.qml</file>
     </qresource>
 </RCC>
